force-app/main/default/objects/Clinical_Event__c/Clinical_Event__c.object-meta.xml
<CustomObject>
    <description
  >Lightweight clinical event linked to an animal and episode.</description>
    <label>Clinical Event</label>
    <nameField>
        <label>Clinical Event Number</label>
        <displayFormat>CE-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>