force-app/main/default/objects/Clinical_Event__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <description>Animal linked redundantly for direct reporting.</description>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Clinical Events</relationshipLabel>
    <relationshipName>Clinical_Events</relationshipName>
    <type>Lookup</type>
</CustomField>