force-app/main/default/objects/Clinical_Event__c/fields/Animal_Episode__c.field-meta.xml
<CustomField>
    <fullName>Animal_Episode__c</fullName>
    <description>Episode linked to the clinical event.</description>
    <label>Animal Episode</label>
    <referenceTo>Animal_Episode__c</referenceTo>
    <relationshipLabel>Clinical Events</relationshipLabel>
    <relationshipName>Clinical_Events</relationshipName>
    <type>Lookup</type>
</CustomField>