force-app/main/default/objects/Clinical_Event__c/fields/Body_Condition_Score__c.field-meta.xml
<CustomField>
    <fullName>Body_Condition_Score__c</fullName>
    <description>Body condition score captured during the event.</description>
    <label>Body Condition Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>