force-app/main/default/objects/Clinical_Event__c/fields/Clinical_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Clinical_DateTime__c</fullName>
    <description>Date and time of the clinical event.</description>
    <label>Clinical Date Time</label>
    <type>DateTime</type>
</CustomField>