force-app/main/default/objects/Clinical_Event__c/fields/Clinical_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Event_Type__c</fullName>
    <description>Type of clinical event recorded.</description>
    <label>Clinical Event Type</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Examination</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>