force-app/main/default/objects/Clinical_Event__c/fields/Clinical_Priority__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Priority__c</fullName>
    <description>Clinical priority assigned to the event.</description>
    <label>Clinical Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Clinical_Priority</valueSetName>
    </valueSet>
</CustomField>