force-app/main/default/objects/Clinical_Event__c/fields/Clinician_Contact__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Contact__c</fullName>
    <description
  >External or internal clinician contact linked to the event.</description>
    <label>Clinician Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clinical Events</relationshipLabel>
    <relationshipName>Clinical_Events</relationshipName>
    <type>Lookup</type>
</CustomField>