force-app/main/default/objects/Clinical_Event__c/fields/Pain_Observed__c.field-meta.xml
<CustomField>
    <fullName>Pain_Observed__c</fullName>
    <description>Flags whether pain was observed in the event.</description>
    <label>Pain Observed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>