force-app/main/default/objects/Clinical_Event__c/fields/Pain_Severity__c.field-meta.xml
<CustomField>
    <fullName>Pain_Severity__c</fullName>
    <description>Severity of pain observed during the event.</description>
    <label>Pain Severity</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>