force-app/main/default/objects/Clinical_Event__c/fields/Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>Problem_Code__c</fullName>
    <description
  >Short problem or issue code used for reporting or integration.</description>
    <label>Problem Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>