force-app/main/default/objects/Clinical_Event__c/fields/Problem_Summary__c.field-meta.xml
<CustomField>
    <fullName>Problem_Summary__c</fullName>
    <description
  >Narrative summary of the clinical issue or treatment.</description>
    <label>Problem Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>