force-app/main/default/objects/Clinical_Event__c/fields/Pulse__c.field-meta.xml
<CustomField>
    <fullName>Pulse__c</fullName>
    <description>Pulse captured during the event.</description>
    <label>Pulse</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>