force-app/main/default/objects/Clinical_Event__c/fields/Recorded_By__c.field-meta.xml
<CustomField>
    <fullName>Recorded_By__c</fullName>
    <description>User who recorded the event.</description>
    <label>Recorded By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Clinical Events</relationshipLabel>
    <relationshipName>Clinical_Events</relationshipName>
    <type>Lookup</type>
</CustomField>