force-app/main/default/objects/Clinical_Event__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <description>Optional case linked to the clinical event.</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Clinical Events</relationshipLabel>
    <relationshipName>Clinical_Events</relationshipName>
    <type>Lookup</type>
</CustomField>