force-app/main/default/objects/Clinical_Event__c/fields/Respiration__c.field-meta.xml
<CustomField>
    <fullName>Respiration__c</fullName>
    <description>Respiration captured during the event.</description>
    <label>Respiration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>