force-app/main/default/objects/Clinical_Event__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>Temperature captured during the event.</description>
    <label>Temperature</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>