force-app/main/default/objects/Clinical_Event__c/fields/Treatment_Given__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Given__c</fullName>
    <description
  >Treatment or intervention delivered during the event.</description>
    <label>Treatment Given</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>