force-app/main/default/objects/Clinical_Event__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Weight captured during the event.</description>
    <label>Weight</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>